# Polar (OSS)

# Copyright 2024 Carnegie Mellon University.

# NO WARRANTY. THIS CARNEGIE MELLON UNIVERSITY AND SOFTWARE ENGINEERING
# INSTITUTE MATERIAL IS FURNISHED ON AN "AS-IS" BASIS. CARNEGIE MELLON
# UNIVERSITY MAKES NO WARRANTIES OF ANY KIND, EITHER EXPRESSED OR IMPLIED, AS
# TO ANY MATTER INCLUDING, BUT NOT LIMITED TO, WARRANTY OF FITNESS FOR PURPOSE
# OR MERCHANTABILITY, EXCLUSIVITY, OR RESULTS OBTAINED FROM USE OF THE
# MATERIAL. CARNEGIE MELLON UNIVERSITY DOES NOT MAKE ANY WARRANTY OF ANY KIND
# WITH RESPECT TO FREEDOM FROM PATENT, TRADEMARK, OR COPYRIGHT INFRINGEMENT.

# Licensed under a MIT-style license, please see license.txt or contact
# permission@sei.cmu.edu for full terms.

# [DISTRIBUTION STATEMENT A] This material has been approved for public release
# and unlimited distribution.  Please see Copyright notice for non-US
# Government use and distribution.

# This Software includes and/or makes use of Third-Party Software each subject
# to its own license.

# DM24-0470

[workspace]
resolver = "2"

members = [
    "cassini/broker",
    "cassini/client",
    "cassini/types",
    "cassini/test/common",
    "cassini/test/control",
    "cassini/test/producer",
    "cassini/test/sink",
    "lib",
    "gitlab/common",
    "gitlab/consume",
    "gitlab/observe",
    "jira/common",
    "jira/consume",
    "jira/observe",
    "gitlab/schema",
    "gitlab/query",
    "policy-config",
    "kubernetes/observe",
    "kubernetes/consume",
    "kubernetes/common",
    "provenance",
    "config-ops",
    "openapi/observe",
    "openapi/consume",
    "openapi/common",
]


[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.metadata.crane]
name = "polar"

[workspace.dependencies]
ahash = "0.8.12"
async-global-executor-trait = "3.1.0"
cassini-backoff = { git = "https://github.com/daveman1010221/backoff", branch = "master" }
base64 = "0.22.1"
bitflags = "2.9.4"
executor-trait = "3.1.0"
getrandom = "0.3.3"
k8s-openapi = "0.26"
libloading = "0.8.9"
neo4rs = { version = "0.9.0-rc.8", git = "https://github.com/neo4j-labs/neo4rs", tag = "v0.9.0-rc.8" }
parse_link_header = "0.4"
rand = "0.9"
rand_core = "0.9"
reactor-trait = "3.1.1"
reqwest = "0.12"
rkyv = "0.8.12"
sysinfo = "0.36"
tcp-stream = "0.34"
webpki-roots = "1"
bytecheck = "0.8.2"
bytecheck_derive = "0.8.2"
lapin = { version = "4.0.0-rc.1", default-features = false, features = ["tokio", "rustls"] }
amq-protocol = { git = "https://github.com/amqp-rs/amq-protocol", tag = "v10.0.0-rc.3" }
amq-protocol-types = { git = "https://github.com/amqp-rs/amq-protocol", tag = "v10.0.0-rc.3" }
amq-protocol-uri = { git = "https://github.com/amqp-rs/amq-protocol", tag = "v10.0.0-rc.3" }
amq-protocol-tcp = { git = "https://github.com/amqp-rs/amq-protocol", tag = "v10.0.0-rc.3" }
cassini-client = { path = "cassini/client" }
cassini-types  = { path = "cassini/types" }
kube = { version = "2.0.1", default-features = false, features = ["client", "aws-lc-rs", "rustls-tls", "runtime", "derive"] }

[patch.crates-io]
getrandom = { git = "https://github.com/rust-random/getrandom", tag = "v0.3.3" }

dhall = { git = "https://github.com/daveman1010221/dhall-rust", branch = "modernize-rkyv" }
serde_dhall = { git = "https://github.com/daveman1010221/dhall-rust", branch = "modernize-rkyv" }
lapin = { git = "https://github.com/amqp-rs/lapin", tag = "v4.0.0-rc.1" }
amq-protocol = { git = "https://github.com/amqp-rs/amq-protocol", tag = "v10.0.0-rc.3" }
amq-protocol-types = { git = "https://github.com/amqp-rs/amq-protocol", tag = "v10.0.0-rc.3" }
amq-protocol-uri = { git = "https://github.com/amqp-rs/amq-protocol", tag = "v10.0.0-rc.3" }
amq-protocol-tcp = { git = "https://github.com/amqp-rs/amq-protocol", tag = "v10.0.0-rc.3" }
