[package]
name = "neo_graph_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph_adapter = { path = "../graph_adapter"}
neo4rs = "0.7.1"
async-trait = "0.1.68"
delegate = "0.12.0"
tokio = "1.27"