[package]
name = "example-todo"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.8.0"
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1.43.1", features = ["full"] }
tower = "0.5"

# Fix a vulnerability in a transitive dependency.
zip = { version = "=2.4.0" }

serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.13.1", features = ["v4"] }

utoipa = { version = "5.4.0", features = ["yaml", "axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-axum = { version = "0.2.0" }

# Deps require tokio and their include is vulnerable

[dev-dependencies]
tokio = "1.43.1"
