[package]
name = "cassini"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
ractor = { version="0.14.1", features = ["async-trait"]}
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"
tokio = { version = "1.30", features = ["full"] }
tracing = "0.1.41"
tracing-glog = "0.4.0"
tracing-subscriber = { version ="0.3.19", features=["std", "env-filter"]}
uuid = { version = "1.11.0", features = ["v4"] }
tokio-util = "0.7.13"
#TODO: Consider using FIPS cryptography features?
# REFERENCE: https://docs.rs/rustls/latest/rustls/index.html#crate-features
rustls = { version = "0.23.20", features = ["aws_lc_rs"]}
tokio-rustls = "0.26.1"
#TODO: Use the workspace hack to help centralize our dependencies
# At the moment, enabling it prevents the listener manager from starting
# I believe it is because the workspace-hack Cargo.toml tries to use the "ring" feature of rustls
# Which we do not need presntly, by default, it uses the aws-lc_rs crate
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[[bin]]
name = "cassini-server"
path = "src/main.rs"