[package]
name = "cassini"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
ractor = { version="0.14.1", features = ["async-trait"]}
rkyv = "0.8.10"
tokio = { version = "1.30", features = ["full"] }
tracing = "0.1.41"
tracing-glog = "0.4.0"
tracing-subscriber = { version ="0.3.19", features=["std", "env-filter"]}
uuid = { version = "1.11.0", features = ["v4"] }
tokio-util = "0.7.13"
#TODO: Consider using FIPS cryptography features?
# REFERENCE: https://docs.rs/rustls/latest/rustls/index.html#crate-features
rustls = { version = "=0.23.25", features = ["aws-lc-rs"] }
tokio-rustls = "0.26.1"
polar = { path = "../lib" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# Fix a vulnerability in a transitive dependency.
ring = { version = "=0.17.14" }

[[bin]]
name = "cassini-server"
path = "src/main.rs"
