[package]
name = "cassini"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
ractor = { version="0.15.6", features = ["async-trait"]}
rkyv = "0.8.10"
tokio = { version = "1.30", features = ["full"] }
tracing = "0.1.41"
tracing-glog = "0.4.0"
tracing-subscriber = { version ="0.3.19", features=["std", "env-filter"]}
uuid = { version = "1.11.0", features = ["v4"] }
tokio-util = "0.7.13"
rustls = { version = "=0.23.25", features = ["aws-lc-rs"] }
tokio-rustls = "0.26.1"
polar = { path = "../lib" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# Fix a vulnerability in a transitive dependency.
ring = { version = "=0.17.14" }
url = "2.5.4"

[[bin]]
name = "cassini-server"
path = "src/main.rs"
