[package]
name = "polar"
version.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
# gitlab-queries = { path = "../gitlab/query"}
tracing = "0.1.41"
tracing-glog = "0.4.1"
tracing-subscriber = { version ="0.3.20", features=["std", "env-filter"]}
opentelemetry = "0.31.0"
tracing-opentelemetry = "0.32.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = "0.31.0"
cassini-types = { path = "../cassini/types" }
cassini-client = { path = "../cassini/client" }
serde = {version = "1", features = ["derive"]}
ractor = { version = "0.15.8", features = ["async-trait"] }
neo4rs = { workspace = true }
rkyv = { workspace = true }
uuid = "1.18.1"
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tokio = { version = "1.49.0", features = ["full"] }
sha2 = "0.10.9"
hex = "0.4.3"

[dev-dependencies]
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = ["neo4j"]}
