[package]
name = "polar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cassini-client.workspace = true
cassini-types.workspace = true
hex.workspace = true
neo4rs.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry.workspace = true
ractor.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rkyv.workspace = true
serde.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = ["neo4j"] }
