[package]
name = "polar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cassini-client.workspace = true
cassini-types.workspace = true
hex.workspace = true
neo4rs.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry.workspace = true
ractor.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rkyv.workspace = true
serde.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
bytes.workspace = true
k8s-openapi = { workspace = true, features = ["v1_32"] }
serde_json.workspace = true
[dev-dependencies]
polar.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio.workspace = true
