[package]
name = "logger"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cassini-client.workspace = true
cassini-types.workspace = true
polar.workspace = true
ractor.workspace = true
rkyv.workspace = true
tokio.workspace = true
tracing.workspace = true

[[bin]]
name = "event-logger"
path = "src/entrypoint.rs"
