[package]
name = "todo-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-lite = "1.13.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
common = { path = "../../../../src/agents/gitlab/common/" }
serde_json = "1.0.120"
lapin = "2.4.0"
utoipa = "4.2.3"
neo4rs = "0.6.1"
todo_types = {path = "../../types"}
url = "2.5.2"
