[package]
name = "todo-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common"}
futures-lite = "1.13.0"
tracing = "0.1.41"
tracing-subscriber = { version ="0.3.19", features=["std", "env-filter"]}
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
ractor = { version="0.14.1", features = ["async-trait"]}
serde_json = "1.0.120"
cassini = { path = "../../../../src/agents/broker/" }
utoipa = "5.3.1"
neo4rs = "0.6.1"
url = "2.5.2"