[package]
name = "todo-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common"}
futures-lite = "1.13.0"
tracing = "0.1.41"
tracing-subscriber = { version ="0.3.19", features=["std", "env-filter"]}
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
ractor = { version="0.15.6", features = ["async-trait"]}
serde_json = "1.0.120"
cassini = { path = "../../../../src/agents/broker/" }
utoipa = "5.3.1"
neo4rs = "0.8.0"
url = "2.5.2"

# Fix a vulnerability in a transitive dependency.
ring = { version = "=0.17.14" }
rustls = { version = "=0.23.25", default-features = false, features = ["aws-lc-rs", "ring", "std"] }
rustls-webpki  = { version = "=0.103.0" }
webpki-roots  = { version = "=0.26.8" }
