[package]
name = "orchestrator-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true

[[bin]]
name = "orchestrator-core"
path = "src/main.rs"
