
[package]
name = "orchestrator-backend-k8s"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
tracing.workspace = true
futures.workspace = true
async-trait.workspace = true
uuid.workspace = true
orchestrator-core.workspace = true
[lib]
name = "orchestrator_backend_k8s"
path = "src/lib.rs"
