[package]
name = "cassini-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rkyv = { workspace = true }
polar = { path = "../../lib" }
async-trait.workspace = true
ractor.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-glog.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
tokio-util.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
cassini-tracing.workspace = true
cassini-types.workspace = true
ring.workspace = true
url.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true

[[bin]]
name = "cassini-server"
path = "src/main.rs"
