[package]
name = "cassini-c2"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cassini-client.workspace = true
cassini-types.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry.workspace = true
ractor.workspace = true
tokio.workspace = true
tracing-glog.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
