[package]
name = "cassini-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cassini-types.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry.workspace = true
tracing-glog.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
