[package]
name = "cassini-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
cassini-tracing.workspace = true
cassini-types.workspace = true
opentelemetry.workspace = true
ractor.workspace = true
ring.workspace = true
rkyv = { workspace = true }
rustls.workspace = true
socket2.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-glog.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4"] }
