[package]
name = "cassini-harness"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
ractor = { version = "0.15.8", features = ["async-trait"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["full"] }
cassini-client = { path = "../client" }
polar = { path = "../../lib" }
fake = "4.4.0"
rand = "0.9.2"
tracing = "0.1.41"
