[package]
name = "cassini-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ractor.workspace = true
tracing.workspace = true
rkyv = { workspace = true }
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
rand = { workspace = true, features = ["thread_rng", "default"] }  # workspace rand is 0.10
serde = { workspace = true }
