[package]
name = "cert-issuer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["test-util"]}
x509-parser.workspace = true
base64.workspace = true
rsa.workspace = true
rand = { workspace = true, features = ["thread_rng"] }
uuid.workspace = true
# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2"

# Cryptography
ring = "0.17"
rcgen = "0.13"  # CSR generation

# JWT / OIDC
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for JWKS, CA, init container -> cert issuer)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Concurrency
dashmap = "6"

# Errors
thiserror = "1"
anyhow = "1"

# Time
time = { version = "0.3", features = ["serde", "macros"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Secrets
secrecy = "0.10"

# Trait async support
async-trait = "0.1"

# Test utilities
wiremock.workspace = true
tempfile.workspace = true

cert-issuer-common = { path = "../common" }
polar = { path = "../../lib" }
